Rewrite SIMD addition using JDK Vector API for true hardware acceleration
This commit replaces the previous SIMD-like implementation with a true
SIMD implementation using the JDK Vector API (jdk.incubator.vector),
which allows the JIT compiler to generate actual hardware SIMD instructions
(AVX2, AVX512, ARM NEON/SVE).

Key improvements:
- Uses LongVector.SPECIES_256 for 256-bit vectors (4 x 64-bit lanes)
- Leverages hardware vector instructions via JIT compilation
- Vector operations: add(), compare(), broadcast(), fromArray(), intoArray()
- Unsigned comparison using VectorOperators.ULT for carry detection
- VectorMask for efficient lane-wise carry/cascade detection

Implementation details:
- Load operands into 256-bit SIMD vectors
- Parallel addition executes on all 4 lanes simultaneously
- Carry detection via unsigned less-than comparison (result < operand)
- Cascade detection for lanes with all 1s (0xFFFFFFFFFFFFFFFF)
- Scalar cross-lane carry propagation using lookup table
- Final carry application via SIMD vector addition

Build configuration:
- Added --add-modules jdk.incubator.vector to compiler arguments
- Enabled Vector API module for test execution
- Updated JAR manifest to include module dependency

Hardware requirements:
- x86-64: AVX2 (widely available since 2013)
- ARM: NEON/SVE (alternative vector instruction sets)
- Fallback: JVM gracefully degrades to scalar on unsupported hardware

Performance benefits:
- True parallel execution on CPU SIMD units
- Eliminates sequential data dependencies
- Reduced instruction count via vectorization
- Better instruction cache utilization

Based on reference implementation from .NET Runtime:
https://github.com/dotnet/runtime/blob/main/src/libraries/System.Runtime.Numerics/src/System/UInt256.cs